gcc/testsuite/algol68/compile/error-stropping-keyword-3.a68
begin if then 10 else 20 fi { dg-error "if" }
end
